feature(ddd-models) 增加创建泛型实例的两种方法，一种是反射，另一种是工厂方法